Update big-title style size to avoid wrapping

--- a/app/static/css/statistics.css
+++ b/app/static/css/statistics.css
@@ -50,5 +50,5 @@ td.sideline {
 }
 
 .big-title {
-    font: 26px Trebuchet MS, sans-serif;
+    font: 22px Trebuchet MS, sans-serif;
 }
